--- a/index.html
+++ b/index.html
@@ -8,7 +8,38 @@
 </head>
 <body>
     <header>
+      <nav>
+        <h3>G3 Architects</h3>
+        <ul>
+            <li><a href=""></a>Home</li>
+            <li><a href=""></a>About</li>
+            <li><a href=" "></a>Contact us</li>
+            <li><a href=""></a>Login</li>
+        </ul>
+      </nav>
 
+      <div class="banner">
+<div class="banner-contain">
+    <h1>Brand New 
+        Group of Architects 
+        </h1>
+        <p>There are many variations of passages of Lorem 
+            Ipsum available, but the majority have suffered alteration 
+            in some form, by injected humour,
+             or randomised words which don't look even</p>
+             <button class="praimary">Explore More</button>
+</div>
+                 <img src="images/banner.png" alt="">
+      </div>
     </header>
+
+    <main>
+
+    </main>
+
+    <footer>
+
+
+    </footer>
 </body>
 </html>
